--- a/Website/Home/home.html
+++ b/Website/Home/home.html
@@ -34,8 +34,9 @@
                 </ul>
             </p>
             <div class="search-bar">
-                <button class="check-ckd-btn" onclick="redirectToForm()">Check CKD</button>
-
+                <a href="check.html">
+                    <button class="check-ckd-btn">Check CKD</button>
+                </a>
             </div>
         </div>
         <div class="image-container">
