--- a/Website/Home/home.html
+++ b/Website/Home/home.html
@@ -11,8 +11,6 @@
         <div class="logo">CKD</div>
         <nav>
             <ul>
-                <li><a href="#" class="doc-btn">Doctors</a></li>
-                <li><a href="#" class="about-btn">About</a></li>
                 <li><a href="#" class="settings-btn">Settings</a></li>
             </ul>
         </nav>
@@ -34,8 +32,8 @@
                 </ul>
             </p>
             <div class="search-bar">
-                <a href="check.html">
-                    <button class="check-ckd-btn">Check CKD</button>
+                <a href="../Input/check.html">
+                    <button class="check-ckd-btn">Summarize Report</button>
                 </a>
             </div>
         </div>
@@ -49,4 +47,6 @@
     </footer>
     <script src="home.js"></script>
 </body>
+</html>
+</html>
 </html>
