--- a/Website/Input/check.html
+++ b/Website/Input/check.html
@@ -4,15 +4,14 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CKD Prediction - Check</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="input.css">
 </head>
 <body>
     <header>
         <div class="logo">CKD</div>
         <nav>
             <ul>
-                <li><a href="#" class="doc-btn">Doctors</a></li>
-                <li><a href="#" class="about-btn">About</a></li>
+                <li><a href="../Home/home.html" class="home-btn">Home</a></li>
                 <li><a href="#" class="settings-btn">Settings</a></li>
             </ul>
         </nav>
@@ -29,4 +28,5 @@
         <p>&copy; 2025 CKD Prediction. All Rights Reserved.</p>
     </footer>
 </body>
+</html>
 </html>
