--- a/web/Home/index.html
+++ b/web/Home/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>CKD Prediction</title>
-    <link rel="stylesheet" href="home.css">
+    <link rel="stylesheet" href="style.css">
 </head>
 <body>
     <header>
@@ -60,8 +60,9 @@
     <footer>
         <p>&copy; 2025 CKD Prediction. All Rights Reserved.</p>
     </footer>
-    <script src="home.js"></script>
+    <script src="app.js"></script>
 </body>
+
 </html>
 </html>
 </html>
