--- a/web/index.html
+++ b/web/index.html
@@ -11,10 +11,8 @@
         <div class="logo">MedSummarizer</div>
         <nav>
             <ul>
-                <li><a href="#home">Home</a></li>
-                <li><a href="#about">About</a></li>
+                <li><a href="about.html">About</a></li>
                 <li><a href="#services">Services</a></li>
-                <li><a href="#contact">Contact</a></li>
             </ul>
         </nav>
     </header>
@@ -74,4 +72,6 @@
 
     <script src="app.js"></script>
 </body>
+</html>
+</html>
 </html>
